--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "42997acf-9db6-4a45-b18a-05389b48cd12"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
